# singapore-streets

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  ROADMAP.md  TODO.md  pyproject.toml  requirements.txt  singapore-streets-clean.txt  singapore-streets.txt  street_categories.csv  street_categories.md
.claude/: settings.local.json
chunks/: category_streets_chunk_aa.md  category_streets_chunk_ab.md  category_streets_chunk_ac.md  streets_chunk_aa  streets_chunk_ab  streets_chunk_ac  streets_chunk_ad  streets_chunk_ae  streets_chunk_af  streets_chunk_ag  streets_chunk_ah  streets_chunk_ai  streets_chunk_aj
data/: Makefile  README.md  allowlist.txt  categories-override.csv  categories-reviewed.csv  singapore-streets.csv  singapore-streets.txt  taxonomy.yaml
dataset/: dataset-metadata.json  singapore-streets.csv
docs/: README.md  architecture.md  scripts.md  street-definition.md
filtered/: invalid-address.txt  invalid_address.txt  invalid_addresses.txt  not-street-names.txt
notebooks/: Part of Speech.ipynb  Street Names.ipynb
osm/: .gitignore  singapore.poly
prompts/: categorize-v1.md
scripts/: build_site.py  canonical_streets.py  categorize_streets.py  category_overrides.py  category_report.py  create-dataset.py  extract_streets.py  fix_typos.py  format-address.py  invalid-address.py  invalid-addresses.py  migrate_categories.py  street-names.py  taxonomy.py
tests/: test_build_site.py  test_canonical_streets.py  test_categorize_streets.py  test_category_overrides.py  test_create_dataset.py  test_extract_streets.py  test_taxonomy.py  (+4 more)
(+6 files in other folders)
